Tue Sep  3 22:57:57 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parser/test_tree.rb: Fix test name to describe test
	  content.

Tue Sep  3 22:54:46 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/treeparser.rb (REXML::Parsers::TreeParser#parse):
	  Remove needless nested parse exception information.
	  [Bug #8844]  [ruby-dev:47672]
	  Reported by Ippei Obayashi. Thanks!!!
	* test/rexml/parser/test_tree.rb: Add a test for the above case.

Tue Sep  3 22:03:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_enc_str_new_cstr): new function to create a string from
	  the C-string pointer with the specified encoding.

Tue Sep  3 21:41:37 2013  Akira Matsuda  <ronnie@dio.jp>

	* eval.c (Init_eval): Make Module#include and Module#prepend public
	  [Feature #8846]

	* test/ruby/test_module.rb (class TestModule): Test for above

Tue Sep  3 21:35:19 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (sys/dyntune.h): for gettune().

	* thread_pthread.c (hpux_attr_getstackaddr): fix missing *.
	  [ruby-core:56983] [Feature #8793]

Tue Sep  3 20:12:46 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (GMP_STR2BIG_DIGITS): New macro.
	  (str2big_gmp): New function.
	  (rb_cstr_to_inum): Use str2big_gmp for big bignums.
	  (rb_str2big_gmp): New function.

	* internal.h (rb_str2big_gmp): Declared.

Tue Sep  3 19:44:40 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry#values): added.
	  [Feature #7763] [ruby-core:51783]

Tue Sep  3 18:26:00 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/inf-ruby.el (inf-ruby-keys, run-ruby): Add magic autoload
	  comments.

	* misc/rdoc-mode.el (rdoc-mode): Ditto.

	* misc/ruby-electric.el (ruby-electric-mode): Ditto.

	* misc/ruby-style.el (ruby-style-c-mode): Ditto.

Tue Sep  3 17:06:15 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_rubyoptions.rb
	  (TestRubyOptions::SEGVTest::ExpectedStderr): the URL was changed at
	  r42800.
