@@ -17,6 +17,19 @@ Last 80 unconsumed characters:
       MESSAGE
     end
 
+    def test_no_close_tag
+      xml = "<root>"
+      exception = assert_raise(REXML::ParseException) do
+        parse(xml)
+      end
+      assert_equal(<<-MESSAGE, exception.to_s)
+No close tag for /root
+Line: 1
+Position: #{xml.bytesize}
+Last 80 unconsumed characters:
+      MESSAGE
+    end
+
     private
     def parse(xml)
       document = REXML::Document.new
